--- a/index.html
+++ b/index.html
@@ -90,33 +90,42 @@
       </section>
       <!--Наша команда-->
       <section>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <figure>
-              <img src="./images/Product Designer.jpg" alt="портрет Игоря Демьяненко" width="270"/>
-              <figcaption>Игорь Демьяненко</figcaption>
-              <figcaption>Product Designer</figcaption>
+              <img src="/images/Designer.jpg" alt="портрет Игоря Демьяненко" width="270"/>
+              <figcaption>
+                <p>Игорь Демьяненко</p>
+                <p>Product Designer</p>
+              </figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <img src="./images/Frontend Developer.jpg" alt="портрет Ольги Репиной" width="270"/>
-              <figcaption>Ольга Репина</figcaption>
-              <figcaption>Frontend Developer</figcaption>
+              <img src="/images/Developer.jpg" alt="портрет Ольги Репиной" width="270"/>
+              <figcaption>
+                <p>Ольга Репина</p>
+                <p>Frontend Developer</p>
+              </figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <img src="./images/Marketing.jpg" alt="портрет Николая Тарасова" width="270"/>
-              <figcaption>Николай Тарасов</figcaption>
-              <figcaption>Marketing</figcaption>
+              <img src="/images/Marketing.jpg" alt="портрет Николая Тарасова" width="270"/>
+              <figcaption>
+                <p>Николай Тарасов</p>
+                <p>Marketing</p>
+              </figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <img src="./images/UI Designer.jpg" alt="портрет Михаила Ермакова" width="270"/>
-              <figcaption>Михаил Ермаков</figcaption>
-              <figcaption>UI Designer</figcaption>
+              <img src="/images/UIDesigner.jpg" alt="портрет Михаила Ермакова" width="270"/>
+              <figcaption>
+                <p>Михаил Ермаков</p>
+                <p>UI Designer</p>
+              </figcaption>
             </figure>
           </li>
         </ul>
@@ -130,7 +139,7 @@
 
         <address>
           <a href="mailto:info@example.com">info@example.com</a><br />
-          <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
       </section>
     </footer>
