Создает ссылку в логотипе и футере, исправляет футер

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <nav>
         <!--навигация по страницам-->
+        <a href="">WebStudio</a>
         <ul>
-          <li><a href="">WebStudio</a></li>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
@@ -133,15 +133,13 @@
     </main>
     <!--Подвал страницы-->
     <footer>
-      <section>
-        <h2>WebStudio</h2>
+        <a href="">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
 
         <address>
           <a href="mailto:info@example.com">info@example.com</a><br />
           <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
-      </section>
     </footer>
   </body>
 </html>
