--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="company" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
-
   <body>
     <header>
       <nav>
@@ -30,30 +30,31 @@
       </section>
       <!--Особенности-->
       <section>
+        <!--<h2>наши преимущиства<h2>-->
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -68,22 +69,25 @@
           <li>
             <img
               src="./images/1.jpg"
-              alt="программирование за рабочим столом"
+              alt="написание кода за рабочим столом"
               width="370"
+              height="294"
             />
           </li>
           <li>
             <img
               src="./images/2.jpg"
-              alt="ноутбук с изображение на экране примеров адаптивной верстки на мобильных телефонах"
+              alt="шаблоны сайта на мобильных телефонах"
               width="370"
+              height="294"
             />
           </li>
           <li>
             <img
               src="./images/3.jpg"
-              alt="изображение на планшете цветовой круг ввиде сот"
+              alt="цветовой круг ввиде сот на планшете"
               width="370"
+              height="294"
             />
           </li>
         </ul>
@@ -94,7 +98,12 @@
         <ul>
           <li>
             <figure>
-              <img src="/images/Designer.jpg" alt="портрет Игоря Демьяненко" width="270"/>
+              <img
+                src="/images/Designer.jpg"
+                alt="портрет Игоря Демьяненко"
+                width="270"
+                height="368"
+              />
               <figcaption>
                 <p>Игорь Демьяненко</p>
                 <p>Product Designer</p>
@@ -103,7 +112,12 @@
           </li>
           <li>
             <figure>
-              <img src="/images/Developer.jpg" alt="портрет Ольги Репиной" width="270"/>
+              <img
+                src="/images/Developer.jpg"
+                alt="портрет Ольги Репиной"
+                width="270"
+                height="368"
+              />
               <figcaption>
                 <p>Ольга Репина</p>
                 <p>Frontend Developer</p>
@@ -112,7 +126,12 @@
           </li>
           <li>
             <figure>
-              <img src="/images/Marketing.jpg" alt="портрет Николая Тарасова" width="270"/>
+              <img
+                src="/images/Marketing.jpg"
+                alt="портрет Николая Тарасова"
+                width="270"
+                height="368"
+              />
               <figcaption>
                 <p>Николай Тарасов</p>
                 <p>Marketing</p>
@@ -121,7 +140,12 @@
           </li>
           <li>
             <figure>
-              <img src="/images/UIDesigner.jpg" alt="портрет Михаила Ермакова" width="270"/>
+              <img
+                src="/images/UIDesigner.jpg"
+                alt="портрет Михаила Ермакова"
+                width="270"
+                height="368"
+              />
               <figcaption>
                 <p>Михаил Ермаков</p>
                 <p>UI Designer</p>
@@ -133,13 +157,10 @@
     </main>
     <!--Подвал страницы-->
     <footer>
-        <a href="">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-        <address>
-          <a href="mailto:info@example.com">info@example.com</a><br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
+      <a href="">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="mailto:info@example.com">info@example.com</a><br />
+      <a href="tel:+380991111111">+38 099 111 11 11</a>
     </footer>
   </body>
 </html>
