исправляет путь к изображениям " наша команда"

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <li>
             <figure>
               <img
-                src="/images/Designer.jpg"
+                src="./images/Designer.jpg"
                 alt="портрет Игоря Демьяненко"
                 width="270"
                 height="368"
@@ -113,7 +113,7 @@
           <li>
             <figure>
               <img
-                src="/images/Developer.jpg"
+                src="./images/Developer.jpg"
                 alt="портрет Ольги Репиной"
                 width="270"
                 height="368"
@@ -127,7 +127,7 @@
           <li>
             <figure>
               <img
-                src="/images/Marketing.jpg"
+                src="./images/Marketing.jpg"
                 alt="портрет Николая Тарасова"
                 width="270"
                 height="368"
@@ -141,7 +141,7 @@
           <li>
             <figure>
               <img
-                src="/images/UIDesigner.jpg"
+                src="./images/UIDesigner.jpg"
                 alt="портрет Михаила Ермакова"
                 width="270"
                 height="368"
