--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
       <nav>
         <!--навигация по страницам-->
-        <a href="">WebStudio</a>
+        <a href="index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -22,8 +22,9 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <!--Шапка-->
+
     <main>
+      <!--hero-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
@@ -68,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="./images/1.jpg"
+              src="./images/work/code.jpg"
               alt="написание кода за рабочим столом"
               width="370"
               height="294"
@@ -76,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./images/2.jpg"
+              src="./images/work/mobile.jpg"
               alt="шаблоны сайта на мобильных телефонах"
               width="370"
               height="294"
@@ -84,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./images/3.jpg"
+              src="./images/work/circle.jpg"
               alt="цветовой круг ввиде сот на планшете"
               width="370"
               height="294"
@@ -97,70 +98,56 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <figure>
-              <img
-                src="./images/Designer.jpg"
-                alt="портрет Игоря Демьяненко"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Игорь Демьяненко</p>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team/igor.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/Developer.jpg"
-                alt="портрет Ольги Репиной"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Ольга Репина</p>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team/olga.jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/Marketing.jpg"
-                alt="портрет Николая Тарасова"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Николай Тарасов</p>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team//nicholas.jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/UIDesigner.jpg"
-                alt="портрет Михаила Ермакова"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Михаил Ермаков</p>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team/michael.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал страницы-->
     <footer>
-      <a href="">WebStudio</a>
+      <a href="index.html">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com">info@example.com</a><br />
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
     </footer>
   </body>
 </html>
