Добавляет точку в ссылке

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <!--навигация по страницам-->
-        <a href="index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Портфолио</a></li>
@@ -142,7 +142,7 @@
     </main>
     <!--Подвал страницы-->
     <footer>
-      <a href="index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
